# spin-comp-deps-test

./: Cargo.toml  README.md  spin.toml
src/: bindings.rs  lib.rs
wit/: world.wit
